--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,40 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<script src="script.js"></script>
 <body>
+<h1>Oblig 1</h1>
+<form>
+    <label for="film">Velg film: </label>
+    <select id="film" name="film">
+        <option></option>
+        <option>Pirates of the Caribbean</option>
+        <option>Cars 4</option>
+        <option>Det regner kjøttboller</option>
+        <option>Titanic</option>
+    </select><br>
+
+    <label for="antall">Antall: </label>
+    <input type="number" id="antall" pattern="" name="antall"><br>
+
+    <label for="fornavn">Fornavn: </label>
+    <input type="text" id="fornavn" pattern="" name="fornavn"><br>
+
+    <label for="etternavn">Etternavn: </label>
+    <input type="text" id="etternavn" pattern="" name="etternavn"><br>
+
+    <label for="telefon">Telefonnr: </label>
+    <input type="number" id="telefon" pattern="[0-9]{8}" name="telefon"><br>
+
+    <label for="epost">Epost: </label>
+    <input type="text" id="epost" name="epost"><br>
+</form>
+<button type="submit" onclick="kjøp()">Kjøp Billett</button><br><br>
+
+<h2>Alle billetter: </h2>
+<p id="utFelt"></p><br><br>
+
+<button onclick="slett()">Slett alle billetter</button>
 
 </body>
 </html>
