Ferdigstilling av oppgave:))

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <script src="script.js"></script>
 <body>
 <h1>Oblig 1</h1>
-
+<div>
     <label for="film">Velg film: </label>
     <select id="film" name="film">
         <option></option>
@@ -37,6 +37,8 @@
     <label for="epost">Epost: </label>
     <input type="text" id="epost" name="epost">
     <p id="epostError" style="color: red"></p><br>
+
+</div>
 
 <button onclick="kjøp()">Kjøp Billett</button><br><br>
 
